<resources>
    <string name="app_name">Side By Side</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Photo">Photo</string>
    <string name="Folder">Folder</string>
    <string name="noBluetooth">Bluetooth is no available on this phone.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photoCountNote">This tells you how many photos you have taken on a day. It will increment by 1  every time you take a photo using the in-app camera or if you take using the phone\'s camera and import the photo into the app\'s folder.</string>
    <string name="folderNote">This folder button opens up an folder. You can import from the main album where every photo is displayed. Once imported, the photo will show in the layout. You can also choose two photos to compare.</string>
    <string name="outline_cameraNote">Some people are too shy to post photos of themselves naked. You can use this camera to take just the silhouette of yourself.</string>
    <string name="settingNote">The setting lets you set a time in the day at which a notification will pop up, reminding you to take a photo.</string>
    <string name="cameraNote">Whatever photo you take with this in-app camera will automatically saved to the app\'s folder. Also taking one photo will increment the daily photo count by 1.</string>
    <string name="editNote">With Edit, can you input the weight and other health info for one particular photo. You can also write a few sentences for comment on how you did. Those numerical info will be used when two photos are compared. The ENABLE TOUCH button is there because when you want to pinch/zoom you have to press it. The maker of this app wasn\'t able to properly fit a photo into the screen when the pinch/zoom was enabled by default. Sorry.</string>
    <string name="compareNote">There is horizontal/vertical mode for comparing landscape/portrait photos. To select a photo to display, you can click the photo frame when the TOUCH is DISABLED or in the menu always. After you have selected two photos, you can share or save the collage.</string>
    <string name="select1Note">Click anywhere inside the area outlined by the line box to select a photo for display. Do that for both photos.</string>
    <string name="select2Note">Once you have selected both photos, you can see you health data you input for each photo (in Edit). If you didn\'t input, it will show 0s. The difference between the data of the two photos will be automatically computed.Also use the purple scroll wheels.</string>
    <string name="zoomEnabledNote">To zoom in, click ENABLED TOUCH. It will become DISABLE TOUCH. Now you can zoom into the particular area you want to compare and share on social media.</string>
    <string name="downloadShareNote">These two buttons are for saving the collage into your phone and sharing it on social media. Everything else works the same way as in portrait mode. Scroll wheels. Click to select.</string>
    <string name="select2LandNote">These two buttons are for selecting photos. They are redundant when TOUCH is ENABLED. But when TOUCH is DISABLED, which is by default, you can click to select; you need these buttons.</string>
    <string name="zoomLandNote">These two buttons are for ENABLE/DISABLE zooming. If zoom is ENABLED, the button will light up.</string>
    <!--Outline camera tutorial text-->
    <string name="bestOutline">To get the best result, the background should have a different color than your body. Move a little so the software can distinguish the static background from the moving foreground, which is you.</string>
    <string name="shutter">If you got a friend to take photo for you, use the front camera and just press the shutter to take photo.</string>
    <string name="timer">If you want to take a photo yourself, put your phone somewhere with its back/selfie cam pointing toward you and use the 5-sec timer.</string>

    <string name="file">/DCIM/raspberry</string>

</resources>
